# pattrie

./: .gitignore  .pre-commit-config.yaml  .stubtest-allowlist  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml
0.1.2/: objects.inv  sitemap.xml
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
benches/: README.md  bench.py
dev/: objects.inv  sitemap.xml
dev/api/: index.html
dev/search/: search_index.json
docs/: api.md  index.md
pattrie/: __init__.py  __init__.pyi  _pattrie.pyi
src/: lib.rs
tests/: test_pattrie.py  test_pickle.py  test_types.py
