[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pattrie"
requires-python = ">=3.12"
description = "Fast IP prefix lookup library with Rust backend"
readme = "README.md"
license = "MIT"
dependencies = []
dynamic = ["version"]
keywords = ["ip", "networking", "trie", "prefix", "cidr", "routing"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dogukancagatay/pattrie"
Source = "https://github.com/dogukancagatay/pattrie"
"Issue Tracker" = "https://github.com/dogukancagatay/pattrie/issues"

[tool.maturin]
python-source = "."
module-name = "pattrie._pattrie"
features = ["pyo3/extension-module"]

[tool.maturin.package-data]
pattrie = ["py.typed", "*.pyi"]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-benchmark",
    "pytricia",
    "pysubnettree",
    "ruff>=0.11",
    "ty>=0.0.1",
    "pytest-cov>=7.1.0",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"benches/*" = ["E501"]
